# simple-ollama-ai-chat

./: .gitignore  Makefile  README.md  ollama_gui_chat.py  ollama_gui_clipboard.py  ollama_gui_logged.py  pyproject.toml  repair_uv.ps1  requirements.txt
.github/workflows/: apply-upload.yml
.upload/: extended_logging.patch.xz.part00  extended_logging.patch.xz.part01  extended_logging.patch.xz.part02  extended_logging.patch.xz.part03  extended_logging.patch.xz.part04  extended_logging.patch.xz.part05
tests/: test_clipboard.py  test_logging.py
